@@ -5,6 +5,10 @@ original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfi
 
 NOTE : this modified version is still under the Artistic License 2.0
 
+- In the wilderness of West Weald, the add-on automatically recognizes you are in the adventure zone.
+- In the Scholarium, the add-on automatically recognizes you are in the adventure zone.
+- Updated location database for Gold Road Chapter. Skingrad, Ontus and Vashabar are now recognized as cities.
+- Mirrormoor Mosaic sites are now recognized as same as Dolmens.
 - Updated bundled LibEventHandler version to 1.3.5 (AddOnVersion: 1305).
 
 Version 1.6.91 : by Calamath
